adding min_value to most_cited_documents

--- a/guide/tutorial/04-step-03-keyword-completation.ipynb
+++ b/guide/tutorial/04-step-03-keyword-completation.ipynb
@@ -158,7 +158,7 @@
        "4    High-frequency trading;Market making;Market qu...\n",
        "5    Financial disclosure;Individual characteristic...\n",
        "6                                                 None\n",
-       "7    Commerce;Automated social engineering;Social n...\n",
+       "7    Social network securities;Social engineering;A...\n",
        "8                                                 None\n",
        "9                                                 None\n",
        "dtype: object"
@@ -319,7 +319,7 @@
    "outputs": [],
    "source": [
     "## se extrae del titulo y del abstract\n",
-    "keywords_title_abstract = title_abstract.map(lambda x: kyw.extract_from(x, sep=';'))"
+    "keywords_title_abstract = title_abstract.map(lambda x: kyw.extract_from_text(x, sep=';'))"
    ]
   },
   {
