--- a/guide/tutorial/06-step-05-keywords-cleanup.ipynb
+++ b/guide/tutorial/06-step-05-keywords-cleanup.ipynb
@@ -188,13 +188,13 @@
       "Record index: 7\n",
       "{\n",
       "  \"Title\": \"Design and analysis of a social botnet\",\n",
-      "  \"keywords (cleaned)\": \"Commerce;Automated social engineering;Social networking (online);Social network security;Online systems;Socialbots;Profitability;Online privacy;Network security;Behavioral research;On-line social networks;Social network security;Social networking (online);Botnets;Social engineering\"\n",
+      "  \"keywords (cleaned)\": \"Social network security;Social engineering;Automated social engineering;Online privacy;Socialbots;Network security;Behavioral research;Botnets;Profitability;Commerce;Social networking (online);Social network security;On-line social networks;Online systems;Social networking (online)\"\n",
       "}\n",
       "-----------------------------------------------\n",
       "Record index: 8\n",
       "{\n",
       "  \"Title\": \"The Flash Crash: High-Frequency Trading in an Electronic Market\",\n",
-      "  \"keywords (cleaned)\": \"Flash crash;High frequency;high-frequency traders;High-frequency trading;trading;design;edi;Electronic market;Financial markets;Financial markets;Futures;Futures market;index;intraday;market;prices;r;stock;stock index futures;trading\"\n",
+      "  \"keywords (cleaned)\": \"Electronic market;Flash crash;High frequency;high-frequency traders;High-frequency trading;market;trading;trading;design;edi;Financial markets;Financial markets;Futures;Futures market;index;intraday;prices;r;stock;stock index futures\"\n",
       "}\n",
       "-----------------------------------------------\n",
       "Record index: 9\n",
