--- a/guide/tutorial/10-step-09-co_ocurrence.ipynb
+++ b/guide/tutorial/10-step-09-co_ocurrence.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
     "    column_c='Year', \n",
     "    sep_r=';', \n",
     "    sep_c=None, \n",
-    "    minmax=(5,8)).heatmap(ascendingA=True, ascendingB=False)"
+    "    minmax=(5,8)).heatmap(ascending_r=True, ascending_c=False)"
    ]
   },
   {
@@ -684,12 +684,12 @@
     "    column_c='Year', \n",
     "    sep_r=';', \n",
     "    sep_c=None, \n",
-    "    minmax=(5,8)).heatmap(ascendingA=True, ascendingB=False, library='altair')"
+    "    minmax=(5,8)).heatmap(ascending_r=True, ascending_c=False, library='altair')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
        "https://altair-viz.github.io/user_guide/troubleshooting.html\n"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,12 +1137,12 @@
     "    column_c='Year', \n",
     "    sep_r=';', \n",
     "    sep_c=None, \n",
-    "    minmax=(5,8)).circlerel(ascendingA=True, ascendingB=False, library='altair')"
+    "    minmax=(5,8)).circlerel(ascending_r=True, ascending_c=False, library='altair')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1871,7 +1871,7 @@
        "trading                        8.0   7.0   0.0   7.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1932,48 +1932,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Algorithmic trading system</th>\n",
-       "      <td>5.357143e-02</td>\n",
-       "      <td>0.021795</td>\n",
-       "      <td>8.333333e-02</td>\n",
+       "      <td>1.609195e-01</td>\n",
+       "      <td>0.020555</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Architecture paradigms</th>\n",
-       "      <td>-9.757820e-18</td>\n",
-       "      <td>0.002564</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>-3.035766e-18</td>\n",
+       "      <td>0.002055</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Holonic systems</th>\n",
-       "      <td>-1.127570e-17</td>\n",
-       "      <td>0.007692</td>\n",
-       "      <td>8.673617e-18</td>\n",
+       "      <td>1.040834e-17</td>\n",
+       "      <td>0.006166</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Multi agent systems</th>\n",
-       "      <td>8.928571e-03</td>\n",
-       "      <td>0.037179</td>\n",
-       "      <td>2.500000e-01</td>\n",
+       "      <td>1.494253e-01</td>\n",
+       "      <td>0.033916</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Multi-strategy trading</th>\n",
-       "      <td>-9.757820e-18</td>\n",
-       "      <td>0.002564</td>\n",
-       "      <td>0.000000e+00</td>\n",
+       "      <td>-3.035766e-18</td>\n",
+       "      <td>0.002055</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               Cluster 0  Cluster 1     Cluster 2\n",
-       "Algorithmic trading system  5.357143e-02   0.021795  8.333333e-02\n",
-       "Architecture paradigms     -9.757820e-18   0.002564  0.000000e+00\n",
-       "Holonic systems            -1.127570e-17   0.007692  8.673617e-18\n",
-       "Multi agent systems         8.928571e-03   0.037179  2.500000e-01\n",
-       "Multi-strategy trading     -9.757820e-18   0.002564  0.000000e+00"
+       "                               Cluster 0  Cluster 1  Cluster 2\n",
+       "Algorithmic trading system  1.609195e-01   0.020555        0.0\n",
+       "Architecture paradigms     -3.035766e-18   0.002055        0.0\n",
+       "Holonic systems             1.040834e-17   0.006166        0.0\n",
+       "Multi agent systems         1.494253e-01   0.033916        0.0\n",
+       "Multi-strategy trading     -3.035766e-18   0.002055        0.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2013,23 +2013,23 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Krause S.M.</th>\n",
+       "      <th>Tsagaris T.</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Kumar P.N.</th>\n",
+       "      <th>Denholm S.</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Ganchev K.</th>\n",
+       "      <th>Wah E.</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Tsang E.P.K.</th>\n",
+       "      <th>Montana G.</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Gan L.</th>\n",
+       "      <th>Breitner M.H.</th>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2037,15 +2037,15 @@
        "</div>"
       ],
       "text/plain": [
-       "              cluster\n",
-       "Krause S.M.         0\n",
-       "Kumar P.N.          0\n",
-       "Ganchev K.          0\n",
-       "Tsang E.P.K.        0\n",
-       "Gan L.              0"
+       "               cluster\n",
+       "Tsagaris T.          0\n",
+       "Denholm S.           0\n",
+       "Wah E.               0\n",
+       "Montana G.           0\n",
+       "Breitner M.H.        0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2063,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2136,7 +2136,7 @@
        "4       Article  2006              1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2158,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2231,7 +2231,7 @@
        "4                             ADALINE  2015              1"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2253,7 +2253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2363,7 +2363,7 @@
        "Acharya A.      0.0               0.0   0.0  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
