--- a/guide/tutorial/03-step-02-file-merging.ipynb
+++ b/guide/tutorial/03-step-02-file-merging.ipynb
@@ -23,9 +23,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data-citations.csv\n",
-      "data-keywords.csv\n",
-      "data-refs.csv\n"
+      "demo-abstracts.csv\n",
+      "demo-citations.csv\n",
+      "demo-references.csv\n"
      ]
     }
    ],
@@ -47,9 +47,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "citations = pd.read_csv('data-citations.csv')\n",
-    "keywords = pd.read_csv('data-keywords.csv')\n",
-    "references = pd.read_csv('data-refs.csv')"
+    "citations = pd.read_csv('demo-citations.csv')\n",
+    "keywords = pd.read_csv('demo-abstracts.csv')\n",
+    "references = pd.read_csv('demo-references.csv')"
    ]
   },
   {
@@ -69,9 +69,8 @@
       "text/plain": [
        "Index(['Authors', 'Author(s) ID', 'Title', 'Year', 'Source title', 'Volume',\n",
        "       'Issue', 'Art. No.', 'Page start', 'Page end', 'Page count', 'Cited by',\n",
-       "       'DOI', 'Link', 'Affiliations', 'Authors with affiliations', 'ISSN',\n",
-       "       'ISBN', 'CODEN', 'Abbreviated Source Title', 'Document Type',\n",
-       "       'Publication Stage', 'Access Type', 'Source', 'EID'],\n",
+       "       'DOI', 'Link', 'Affiliations', 'Authors with affiliations',\n",
+       "       'Document Type', 'Access Type', 'Source', 'EID'],\n",
        "      dtype='object')"
       ]
      },
