--- a/guide/tutorial/04-step-03-keyword-completation.ipynb
+++ b/guide/tutorial/04-step-03-keyword-completation.ipynb
@@ -88,37 +88,37 @@
       "-----------------------------------------------\n",
       "Record index: 0\n",
       "{\n",
-      "  \"Author Keywords\": null,\n",
-      "  \"Index Keywords\": \"Algorithmic trading; Experimental demonstrations; Fibre-optic communication; Signal transmission; State-of-the-art technology; Transmission bandwidth; Wavelength division multiplexed; Wide bandwidth; Bandwidth; Data communication systems; Fibers; Glass fibers; Light transmission; Light velocity; Optical fibers; Supercomputers; Vacuum; Wave transmission\",\n",
-      "  \"Title\": \"Towards high-capacity fibre-optic communications at the speed of light in vacuum\"\n",
+      "  \"Author Keywords\": \"Component trends; Empirical mode decomposition; Interference-less machine learning; Long short-term memory; Meta-learning; Moving average; Noise reduction; Nonlinear autoregressive neural network; Time series forecasting\",\n",
+      "  \"Index Keywords\": null,\n",
+      "  \"Title\": \"Improving DWT-RNN model via B-spline wavelet multiresolution to forecast a high-frequency time series\"\n",
       "}\n",
       "-----------------------------------------------\n",
       "Record index: 1\n",
       "{\n",
-      "  \"Author Keywords\": \"High-frequency trading; Limit order markets; Liquidity; Market quality; NASDAQ; Order placement strategies\",\n",
-      "  \"Index Keywords\": null,\n",
-      "  \"Title\": \"Low-latency trading\"\n",
+      "  \"Author Keywords\": null,\n",
+      "  \"Index Keywords\": \"Earnings; Financial data processing; Information science; Newsprint; Consumer price index; Distributed representation; Financial time series forecasting; Long short term memory; Novel applications; Stock predictions; Textual information; Tokyo Stock Exchange; Costs\",\n",
+      "  \"Title\": \"Direct marketing campaigns in retail banking with the use of deep learning and random forests\"\n",
       "}\n",
       "-----------------------------------------------\n",
       "Record index: 2\n",
       "{\n",
-      "  \"Author Keywords\": null,\n",
-      "  \"Index Keywords\": null,\n",
-      "  \"Title\": \"Rise of the machines: Algorithmic trading in the foreign exchange market\"\n",
+      "  \"Author Keywords\": \"And financial time series prediction; Dynamic neural network; Exchange rate time series\",\n",
+      "  \"Index Keywords\": \"Bioinformatics; Financial data processing; Intelligent computing; Multilayer neural networks; Recurrent neural networks; Dynamic neural networks; Exchange rates; Financial time series predictions; Immune algorithms; Regularization technique; Self-organised; Self-organized neural networks; Stationary signal; Algorithms\",\n",
+      "  \"Title\": \"Combining time-series and textual data for taxi demand prediction in event areas: A deep learning approach\"\n",
       "}\n",
       "-----------------------------------------------\n",
       "Record index: 3\n",
       "{\n",
-      "  \"Author Keywords\": null,\n",
-      "  \"Index Keywords\": \"competition (economics); financial market; market system; price dynamics; time series; trade\",\n",
-      "  \"Title\": \"The high-frequency trading arms race: Frequent batch auctions as a market design response\"\n",
+      "  \"Author Keywords\": \"Artificial intelligence; Deep learning; Financial forecasting; NARX algorithm; Stock prediction\",\n",
+      "  \"Index Keywords\": \"Artificial intelligence; Big data; Commerce; Deep learning; Electronic trading; Financial markets; Forecasting; Mean square error; Risk assessment; Time series analysis; Auto-regressive exogenous inputs; Bankruptcy prediction; Computational technology; Financial applications; Financial forecasting; Levenberg-Marquardt algorithm; Stock market prediction; Stock predictions; Learning algorithms\",\n",
+      "  \"Title\": \"Stock price forecasting model based on modified convolution neural network and financial time series analysis\"\n",
       "}\n",
       "-----------------------------------------------\n",
       "Record index: 4\n",
       "{\n",
-      "  \"Author Keywords\": \"High-frequency trading; Market making; Market quality; Volatility\",\n",
-      "  \"Index Keywords\": null,\n",
-      "  \"Title\": \"The diversity of high-frequency traders\"\n",
+      "  \"Author Keywords\": null,\n",
+      "  \"Index Keywords\": \"Commerce; Deep learning; Electronic trading; Financial markets; Forecasting; Multivariant analysis; Network architecture; Forecasting performance; Historical data; Learning architectures; Long-term forecasting; Market forecast; Multi variate analysis; Stock market forecasting; Time series forecasting; Long short-term memory\",\n",
+      "  \"Title\": \"Sentiment-aware volatility forecasting\"\n",
       "}\n"
      ]
     }
@@ -151,16 +151,16 @@
     {
      "data": {
       "text/plain": [
-       "0    Algorithmic trading;Experimental demonstration...\n",
-       "1    High-frequency trading;Limit order markets;Liq...\n",
-       "2                                                 None\n",
-       "3    competition (economics);financial market;marke...\n",
-       "4    High-frequency trading;Market making;Market qu...\n",
-       "5    Financial disclosure;Individual characteristic...\n",
-       "6                                                 None\n",
-       "7    Social network securities;Social engineering;A...\n",
-       "8                                                 None\n",
-       "9                                                 None\n",
+       "0    Component trends;Empirical mode decomposition;...\n",
+       "1    Earnings;Financial data processing;Information...\n",
+       "2    Exchange rate time series;Bioinformatics;Excha...\n",
+       "3    Auto-regressive exogenous inputs;NARX algorith...\n",
+       "4    Commerce;Deep learning;Electronic trading;Fina...\n",
+       "5    High-frequency forecasting;Discrete wavelet tr...\n",
+       "6    Financial time series;Recurrent neural network...\n",
+       "7    Overfitting preventions;Medical data analysis;...\n",
+       "8    Complex networks;Data mining;Economics;Forecas...\n",
+       "9    MAPE;Financial data processing;Electronic trad...\n",
        "dtype: object"
       ]
      },
@@ -198,7 +198,7 @@
     {
      "data": {
       "text/plain": [
-       "51"
+       "8"
       ]
      },
      "execution_count": 7,
@@ -218,26 +218,26 @@
     {
      "data": {
       "text/plain": [
-       "['(location-based) publish/subscribe',\n",
-       " '10-fold cross-validation',\n",
-       " '?-stable processes',\n",
-       " 'ABM',\n",
-       " 'ACE',\n",
-       " 'ADALINE',\n",
-       " 'ADCC-GARCH',\n",
-       " 'AI techniques',\n",
-       " 'ANFIS',\n",
-       " 'ANFIS ensemble',\n",
+       "['(2D) 2 PCA',\n",
+       " '(2D) <sup>2</sup> PCA',\n",
+       " 'AMAPE',\n",
        " 'ANN',\n",
-       " 'ARCH',\n",
        " 'ARIMA',\n",
-       " 'ARMA',\n",
-       " 'Abstract modeling',\n",
-       " 'Academic literature',\n",
-       " 'Academic research',\n",
-       " 'Acceleration',\n",
-       " 'Acceleration approach',\n",
-       " 'Acoustic streaming']"
+       " 'ARIMA Model',\n",
+       " 'ARIMA model',\n",
+       " 'ARIMA modeling',\n",
+       " 'Absolute values',\n",
+       " 'Abstract representation',\n",
+       " 'Accounts receivable',\n",
+       " 'Accuracy Improvement',\n",
+       " 'Accuracy of classifications',\n",
+       " 'Accurate prediction',\n",
+       " 'Activation layer',\n",
+       " 'AdaBoost algorithm',\n",
+       " 'Adam Optimizer',\n",
+       " 'Adaptive boosting',\n",
+       " 'Adaptive gradient algorithm',\n",
+       " 'Adaptive noise']"
       ]
      },
      "execution_count": 8,
