--- a/guide/tutorial/05-step-04-data-deleting.ipynb
+++ b/guide/tutorial/05-step-04-data-deleting.ipynb
@@ -51,25 +51,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ICSIT 2019 - 10th International Conference on Society and Information Technologies, Proceedings\n",
-      "International Conference on Digital Science, DSIC 2018\n",
-      "ACM International Conference Proceeding Series\n",
-      "Proceedings - 23rd IEEE International Conference on High Performance Computing Workshops, HiPCW 2016\n",
-      "Workshop on Logistik und Echtzeit, Echtzeit 2017\n",
-      "4th Workshop on Engineering Applications, WEA 2017\n",
-      "10th International Conference on Knowledge Science, Engineering and Management, KSEM 2017\n",
-      "19th International Conference on Business Information Systems, BIS 2016\n",
-      "SISY 2015 - IEEE 13th International Symposium on Intelligent Systems and Informatics, Proceedings\n",
-      "Proceedings - 2013 Tools and Methods of Program Analysis, TMPA 2013\n",
-      "International Workshops on Business Information Systems, BIS 2015\n",
-      "2015 National Conference on Parallel Computing Technologies, PARCOMPTECH 2015\n",
-      "7th European Workshop on Probabilistic Graphical Models, PGM 2014\n",
-      "Self-Organizing Systems - 7th IFIP TC 6 International Workshop, IWSOS 2013, Revised Selected Papers\n",
-      "Modeling Decisions for Artificial Intelligence - 8th International Conference, MDAI 2011, Proceedings\n",
-      "8th International Conference on Modeling Decisions for Artificial Intelligence, MDAI 2011\n",
-      "Advances in Artificial Intelligence, SBIA 2010 - 20th Brazilian Symposium on Artificial Intelligence, Proceedings\n",
-      "9th IFIP WG 6.1 Conference on e-Business, e-Services and e-Society, I3E 2009\n",
-      "IFIP 19th World Computer Congress, TC 12: IFIP AI 2006 Stream\n"
+      "6th International Conference on Mining Intelligence and Knowledge Exploration, MIKE 2018\n",
+      "IEEE Conference on Evolving and Adaptive Intelligent Systems\n",
+      "European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases, ECML PKDD 2017\n",
+      "European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases, ECML PKDD 2017\n",
+      "European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases, ECML PKDD 2017\n",
+      "Intelligent Computing in Bioinformatics - 10th International Conference, ICIC 2014, Proceedings\n"
      ]
     }
    ],
@@ -87,8 +74,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num. records before =  528\n",
-      "Num. records after =  509\n"
+      "Num. records before =  152\n",
+      "Num. records after =  146\n"
      ]
     }
    ],
@@ -114,8 +101,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num. records before =  509\n",
-      "Num. records after =  503\n"
+      "Num. records before =  146\n",
+      "Num. records after =  145\n"
      ]
     }
    ],
