--- a/guide/tutorial/95-step-08-basic-analysis-Copy2.ipynb
+++ b/guide/tutorial/95-step-08-basic-analysis-Copy2.ipynb
@@ -54,6 +54,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Valid values of the parameter are:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "* Document type\n",
     "\n",
     "* Source title\n",
