--- a/guide/tutorial/16-citations-by-terms.ipynb
+++ b/guide/tutorial/16-citations-by-terms.ipynb
@@ -56,102 +56,102 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>forecasting</td>\n",
+       "      <td>forecasting [108]</td>\n",
        "      <td>613.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>deep learning</td>\n",
+       "      <td>deep learning [76]</td>\n",
        "      <td>541.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>recurrent neural networks</td>\n",
+       "      <td>recurrent neural networks [52]</td>\n",
        "      <td>459.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>artificial neural networks</td>\n",
+       "      <td>artificial neural networks [62]</td>\n",
        "      <td>425.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>commerce</td>\n",
+       "      <td>commerce [61]</td>\n",
        "      <td>414.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>finance</td>\n",
+       "      <td>finance [35]</td>\n",
        "      <td>344.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>machine learning</td>\n",
+       "      <td>machine learning [35]</td>\n",
        "      <td>316.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Classifiers</td>\n",
+       "      <td>Classifiers [6]</td>\n",
        "      <td>280.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Financial markets</td>\n",
+       "      <td>Financial markets [68]</td>\n",
        "      <td>273.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>stock markets</td>\n",
+       "      <td>stock markets [12]</td>\n",
        "      <td>267.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>embeddings</td>\n",
+       "      <td>embeddings [7]</td>\n",
        "      <td>267.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>time series</td>\n",
+       "      <td>time series [91]</td>\n",
        "      <td>244.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
-       "      <td>transaction</td>\n",
+       "      <td>transaction [6]</td>\n",
        "      <td>236.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
-       "      <td>granger causality</td>\n",
+       "      <td>granger causality [4]</td>\n",
        "      <td>235.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
-       "      <td>trading</td>\n",
+       "      <td>trading [65]</td>\n",
        "      <td>232.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>Prediction</td>\n",
+       "      <td>Prediction [4]</td>\n",
        "      <td>230.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
-       "      <td>Market</td>\n",
+       "      <td>Market [3]</td>\n",
        "      <td>230.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
-       "      <td>Water</td>\n",
+       "      <td>Water [4]</td>\n",
        "      <td>230.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>Time Series</td>\n",
+       "      <td>Time Series [3]</td>\n",
        "      <td>230.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>Human</td>\n",
+       "      <td>Human [3]</td>\n",
        "      <td>230.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -159,27 +159,27 @@
        "</div>"
       ],
       "text/plain": [
-       "            keywords (cleaned)  Cited by\n",
-       "0                  forecasting     613.0\n",
-       "1                deep learning     541.0\n",
-       "2    recurrent neural networks     459.0\n",
-       "3   artificial neural networks     425.0\n",
-       "4                     commerce     414.0\n",
-       "5                      finance     344.0\n",
-       "6             machine learning     316.0\n",
-       "7                  Classifiers     280.0\n",
-       "8            Financial markets     273.0\n",
-       "9                stock markets     267.0\n",
-       "10                  embeddings     267.0\n",
-       "11                 time series     244.0\n",
-       "12                 transaction     236.0\n",
-       "13           granger causality     235.0\n",
-       "14                     trading     232.0\n",
-       "15                  Prediction     230.0\n",
-       "16                      Market     230.0\n",
-       "17                       Water     230.0\n",
-       "18                 Time Series     230.0\n",
-       "19                       Human     230.0"
+       "                 keywords (cleaned)  Cited by\n",
+       "0                 forecasting [108]     613.0\n",
+       "1                deep learning [76]     541.0\n",
+       "2    recurrent neural networks [52]     459.0\n",
+       "3   artificial neural networks [62]     425.0\n",
+       "4                     commerce [61]     414.0\n",
+       "5                      finance [35]     344.0\n",
+       "6             machine learning [35]     316.0\n",
+       "7                   Classifiers [6]     280.0\n",
+       "8            Financial markets [68]     273.0\n",
+       "9                stock markets [12]     267.0\n",
+       "10                   embeddings [7]     267.0\n",
+       "11                 time series [91]     244.0\n",
+       "12                  transaction [6]     236.0\n",
+       "13            granger causality [4]     235.0\n",
+       "14                     trading [65]     232.0\n",
+       "15                   Prediction [4]     230.0\n",
+       "16                       Market [3]     230.0\n",
+       "17                        Water [4]     230.0\n",
+       "18                  Time Series [3]     230.0\n",
+       "19                        Human [3]     230.0"
       ]
      },
      "execution_count": 2,
