number of documents citations-by-terms-by-year

--- a/guide/tutorial/18-citations-by-terms-by-year.ipynb
+++ b/guide/tutorial/18-citations-by-terms-by-year.ipynb
@@ -49,21 +49,105 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>2010</th>\n",
-       "      <th>2011</th>\n",
-       "      <th>2012</th>\n",
-       "      <th>2013</th>\n",
-       "      <th>2014</th>\n",
-       "      <th>2015</th>\n",
-       "      <th>2016</th>\n",
-       "      <th>2017</th>\n",
-       "      <th>2018</th>\n",
-       "      <th>2019</th>\n",
+       "      <th>Document Type</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Cited by</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Article</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Article [52]</td>\n",
+       "      <td>2010 [3]</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Article [52]</td>\n",
+       "      <td>2011 [2]</td>\n",
+       "      <td>42.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Article [52]</td>\n",
+       "      <td>2012 [2]</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Article [52]</td>\n",
+       "      <td>2013 [4]</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Article [52]</td>\n",
+       "      <td>2014 [2]</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Document Type      Year  Cited by\n",
+       "0  Article [52]  2010 [3]      12.0\n",
+       "1  Article [52]  2011 [2]      42.0\n",
+       "2  Article [52]  2012 [2]      14.0\n",
+       "3  Article [52]  2013 [4]      35.0\n",
+       "4  Article [52]  2014 [2]      23.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdf.citations_by_terms_by_year('Document Type').head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2010 [3]</th>\n",
+       "      <th>2011 [2]</th>\n",
+       "      <th>2012 [2]</th>\n",
+       "      <th>2013 [4]</th>\n",
+       "      <th>2014 [2]</th>\n",
+       "      <th>2015 [2]</th>\n",
+       "      <th>2016 [5]</th>\n",
+       "      <th>2017 [19]</th>\n",
+       "      <th>2018 [52]</th>\n",
+       "      <th>2019 [53]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Article [52]</th>\n",
        "      <td>12.0</td>\n",
        "      <td>42.0</td>\n",
        "      <td>14.0</td>\n",
@@ -76,7 +160,7 @@
        "      <td>18.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Article in Press</th>\n",
+       "      <th>Article in Press [2]</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -89,7 +173,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Book Chapter</th>\n",
+       "      <th>Book Chapter [1]</th>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -102,7 +186,7 @@
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Conference Paper</th>\n",
+       "      <th>Conference Paper [88]</th>\n",
        "      <td>9.0</td>\n",
        "      <td>188.0</td>\n",
        "      <td>2.0</td>\n",
@@ -119,20 +203,159 @@
        "</div>"
       ],
       "text/plain": [
-       "                  2010   2011  2012  2013  2014  2015  2016  2017  2018  2019\n",
-       "Article           12.0   42.0  14.0  35.0  23.0   5.0  48.0  46.0  80.0  18.0\n",
-       "Article in Press   0.0    0.0   0.0   0.0   0.0   0.0   0.0   0.0   1.0   0.0\n",
-       "Book Chapter       0.0    0.0   0.0   1.0   0.0   0.0   0.0   0.0   0.0   0.0\n",
-       "Conference Paper   9.0  188.0   2.0   0.0   0.0   1.0  37.0  91.0  37.0   6.0"
+       "                       2010 [3]  2011 [2]  2012 [2]  2013 [4]  2014 [2]  \\\n",
+       "Article [52]               12.0      42.0      14.0      35.0      23.0   \n",
+       "Article in Press [2]        0.0       0.0       0.0       0.0       0.0   \n",
+       "Book Chapter [1]            0.0       0.0       0.0       1.0       0.0   \n",
+       "Conference Paper [88]       9.0     188.0       2.0       0.0       0.0   \n",
+       "\n",
+       "                       2015 [2]  2016 [5]  2017 [19]  2018 [52]  2019 [53]  \n",
+       "Article [52]                5.0      48.0       46.0       80.0       18.0  \n",
+       "Article in Press [2]        0.0       0.0        0.0        1.0        0.0  \n",
+       "Book Chapter [1]            0.0       0.0        0.0        0.0        0.0  \n",
+       "Conference Paper [88]       1.0      37.0       91.0       37.0        6.0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rdf.citations_by_terms_by_year('Document Type').tomatrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2010 [3]</th>\n",
+       "      <th>2011 [2]</th>\n",
+       "      <th>2012 [2]</th>\n",
+       "      <th>2013 [4]</th>\n",
+       "      <th>2014 [2]</th>\n",
+       "      <th>2015 [2]</th>\n",
+       "      <th>2016 [5]</th>\n",
+       "      <th>2017 [19]</th>\n",
+       "      <th>2018 [52]</th>\n",
+       "      <th>2019 [53]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Article [52]</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>8</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Article in Press [2]</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Book Chapter [1]</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Conference Paper [88]</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>42</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Conference Review [1]</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       2010 [3]  2011 [2]  2012 [2]  2013 [4]  2014 [2]  \\\n",
+       "Article [52]                  1         1         1         3         2   \n",
+       "Article in Press [2]          0         0         0         0         0   \n",
+       "Book Chapter [1]              0         0         0         1         0   \n",
+       "Conference Paper [88]         1         1         1         0         0   \n",
+       "Conference Review [1]         1         0         0         0         0   \n",
+       "\n",
+       "                       2015 [2]  2016 [5]  2017 [19]  2018 [52]  2019 [53]  \n",
+       "Article [52]                  1         3          7          8         25  \n",
+       "Article in Press [2]          0         0          0          2          0  \n",
+       "Book Chapter [1]              0         0          0          0          0  \n",
+       "Conference Paper [88]         1         2         12         42         28  \n",
+       "Conference Review [1]         0         0          0          0          0  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdf.terms_by_year('Document Type').tomatrix()"
    ]
   }
  ],
