--- a/guide/tutorial/19-auto-matrix.ipynb
+++ b/guide/tutorial/19-auto-matrix.ipynb
@@ -117,7 +117,7 @@
     }
    ],
    "source": [
-    "rdf.autocorr(\n",
+    "rdf.auto_corr(\n",
     "    column='Authors',\n",
     "    sep=','\n",
     ").head()"
@@ -776,7 +776,7 @@
     }
    ],
    "source": [
-    "rdf.autocorr(\n",
+    "rdf.auto_corr(\n",
     "    column='Authors',\n",
     "    sep=','\n",
     ").tomatrix()"
@@ -801,7 +801,7 @@
     }
    ],
    "source": [
-    "rdf.autocorr(\n",
+    "rdf.auto_corr(\n",
     "    column='Authors',\n",
     "    sep=','\n",
     ").heatmap()"
@@ -6612,7 +6612,7 @@
     }
    ],
    "source": [
-    "rdf.autocorr(\n",
+    "rdf.auto_corr(\n",
     "    column='Authors',\n",
     "    sep=',',\n",
     "    top_n=30\n",
