--- a/guide/tutorial/20-cross-matrix.ipynb
+++ b/guide/tutorial/20-cross-matrix.ipynb
@@ -342,7 +342,7 @@
     }
    ],
    "source": [
-    "rdf.crosscorr(\n",
+    "rdf.cross_corr(\n",
     "    column_r='keywords (cleaned)',\n",
     "    sep_r=';',\n",
     "    column_c='Authors',\n",
@@ -581,7 +581,7 @@
     }
    ],
    "source": [
-    "rdf.crosscorr(\n",
+    "rdf.cross_corr(\n",
     "    column_r='keywords (cleaned)',\n",
     "    sep_r=';',\n",
     "    column_c='Authors',\n",
@@ -877,7 +877,7 @@
     }
    ],
    "source": [
-    "rdf.crosscorr(\n",
+    "rdf.cross_corr(\n",
     "    column_r='keywords (cleaned)',\n",
     "    sep_r=';',\n",
     "    column_c='Authors',\n",
