--- a/guide/tutorial/23-chord-diagram.ipynb
+++ b/guide/tutorial/23-chord-diagram.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "rdf.autocorr(\n",
+    "rdf.auto_corr(\n",
     "    column='Authors',\n",
     "    sep=',',\n",
     "    top_n=20).heatmap()"
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "rdf.autocorr(\n",
+    "rdf.auto_corr(\n",
     "    column='Authors',\n",
     "    sep=',',\n",
     "    top_n=20).chord_diagram()"
