--- a/guide/tutorial/24-circlerel.ipynb
+++ b/guide/tutorial/24-circlerel.ipynb
@@ -5823,7 +5823,7 @@
     }
    ],
    "source": [
-    "rdf.autocorr(\n",
+    "rdf.auto_corr(\n",
     "    column='Authors',\n",
     "    sep=',',\n",
     "    top_n=30\n",
