--- a/guide/tutorial/27-cluster-map-correlation.ipynb
+++ b/guide/tutorial/27-cluster-map-correlation.ipynb
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "rdf.autocorr(\n",
+    "rdf.auto_corr(\n",
     "    column='Authors',\n",
     "    sep=',',\n",
     "    top_n=30\n",
