--- a/guide/tutorial/29-map-to-chord.ipynb
+++ b/guide/tutorial/29-map-to-chord.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "rdf.autocorr(\n",
+    "rdf.auto_corr(\n",
     "    column='Authors',\n",
     "    sep=',',\n",
     "    top_n=20\n",
