--- a/guide/tutorial/30-sankey-plot.ipynb
+++ b/guide/tutorial/30-sankey-plot.ipynb
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "rdf.crosscorr(\n",
+    "rdf.cross_corr(\n",
     "    column_r='keywords (cleaned)',\n",
     "    sep_r=';',\n",
     "    column_c='Authors',\n",
